fix(swagger) new auth
